--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,12 +13,15 @@ h1 {
 }
 
 header {
-	padding: 25px;
 	background-color: #00296B;
 	color: #FFD500;
+	padding: 0 25px;
 	letter-spacing: 1px;
 	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	transition: ease-in-out 0.5s;
+	height: 100px;
 }
 
 footer {
