--- a/src/style/burger-menu.scss
+++ b/src/style/burger-menu.scss
@@ -19,7 +19,8 @@
 	height: 100vh;
 	background-color: #FFFFFF77;
 	top: 0;
-	right: 0;
+	right: -100%;
+	transition: ease-in-out 0.2s;
 }
 
 .burger-header {
