--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -60,6 +60,47 @@ footer a:hover {
 	transform: scale(0.9);
 }
 
+.cross {
+	width: 100%;
+}
+
+.cross-container {
+	height: 30px;
+	padding: 5px;
+	aspect-ratio: 1/1;
+	display: flex;
+	align-items: center;
+	transition: ease-in-out 0.2s;
+	border-radius: 50%;
+	border: 5px solid #00296B00;
+	opacity: 0.5;
+
+	&:hover {
+		transform: rotate(90deg);
+		border: 5px solid #00296B;
+		opacity: 1;
+	}
+}
+
+.cross-part {
+	position: relative;
+	background-color: #00296B;
+	width: 100%;
+	height: 10px;
+	border-radius: 25px;
+
+	&:first-child {
+		top: 5px;
+		transform: rotate(45deg) translateY(0);
+	}
+
+	&:last-child {
+		top: -5px;
+		transform: rotate(-45deg);
+	}
+
+}
+
 .main-button {
 	font-weight: bold;
 	border: none;
