Added a cross and animation to the burger menu

--- a/src/style/burger-menu.scss
+++ b/src/style/burger-menu.scss
@@ -17,16 +17,31 @@
 	position: fixed;
 	width: 33vw;
 	height: 100vh;
-	background-color: #FFFFFF77;
+	background-color: cornsilk;
 	top: 0;
 	right: -100%;
-	transition: ease-in-out 0.2s;
+	transition: ease-in-out 0.5s;
+	box-shadow: -5px 0 5px 5px #00000055;
 }
 
 .burger-header {
 	width: 100%;
-	background-color: #00000077;
+	background-color: #FFD500;
 	height: 100px;
+	display: flex;
+	justify-content: space-around;
+	align-items:center;
+
+	& > h2 {
+		display: inline-block;
+		font-size: 2em;
+		color: #00296B;
+	}
+
+	& > .cross-container {
+		position: absolute;
+		left: 25px;
+	}
 }
 
 .burger-content {
@@ -37,4 +52,11 @@
 	height: 100%;
 	gap: 10px;
 	overflow-y: auto;
+
+	& > a {
+		color: #00296B;
+		text-decoration: none;
+		font-size: 1.5em;
+		font-weight: bold;
+	}
 }
