--- a/src/style/burger-menu.scss
+++ b/src/style/burger-menu.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .burger-container {
 	height: 50px;
 	aspect-ratio: 1/1;
@@ -9,7 +11,7 @@
 .burger-part {
 	width: 100%;
 	height: 20%;
-	background-color: #FFD500;
+	background-color: $base-color;
 	border-radius: 25px;
 }
 
@@ -17,7 +19,7 @@
 	position: fixed;
 	width: 33vw;
 	height: 100vh;
-	background-color: cornsilk;
+	background-color: $text-color;
 	top: 0;
 	right: -100%;
 	transition: ease-in-out 0.5s;
@@ -26,7 +28,7 @@
 
 .burger-header {
 	width: 100%;
-	background-color: #FFD500;
+	background-color: $base-color;
 	height: 100px;
 	display: flex;
 	justify-content: space-around;
@@ -35,7 +37,7 @@
 	& > h2 {
 		display: inline-block;
 		font-size: 2em;
-		color: #00296B;
+		color: $accent-color;
 	}
 
 	& > .cross-container {
@@ -54,7 +56,7 @@
 	overflow-y: auto;
 
 	& > a {
-		color: #00296B;
+		color: $accent-color;
 		text-decoration: none;
 		font-size: 1.5em;
 		font-weight: bold;
