--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bahianita&display=swap');
+@import 'variables';
 
 body {
 	margin: 0;
 	font-family: sans-serif;
-	background-color: cornsilk;
+	background-color: $text-color;
 }
 
 h1 {
@@ -13,8 +14,8 @@ h1 {
 }
 
 header {
-	background-color: #00296B;
-	color: #FFD500;
+	background-color: $accent-color;
+	color: $base-color;
 	padding: 0 25px;
 	letter-spacing: 1px;
 	display: flex;
@@ -28,7 +29,7 @@ footer {
 	position: fixed;
 	right: 0;
 	bottom: 0;
-	background-color: #FFD500;
+	background-color: $base-color;
 	padding: 10px;
 	border-top-left-radius: 25px;
 	opacity: 0.1;
@@ -44,7 +45,7 @@ footer:hover {
 footer a {
 	text-decoration: none;
 	font-weight: bold;
-	color: #00296B;
+	color: $accent-color;
 }
 
 footer a:hover {
@@ -72,19 +73,19 @@ footer a:hover {
 	align-items: center;
 	transition: ease-in-out 0.2s;
 	border-radius: 50%;
-	border: 5px solid #00296B00;
+	border: 5px solid #00000000;
 	opacity: 0.5;
 
 	&:hover {
 		transform: rotate(90deg);
-		border: 5px solid #00296B;
+		border: 5px solid $accent-color;
 		opacity: 1;
 	}
 }
 
 .cross-part {
 	position: relative;
-	background-color: #00296B;
+	background-color: $accent-color;
 	width: 100%;
 	height: 10px;
 	border-radius: 25px;
